Fixed overlap issue for small widths

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -60,7 +60,7 @@ $btn-primary: #F55451;
 
 body {
   margin: 0;
-  // padding: 10px 10px 10px 0;
+  padding: 0 !important;
   background-color: $background-color !important;
 }
 
@@ -143,6 +143,7 @@ $sidebar-trans-time: 0.5s;
 
 #sidebar, #sidebar-placeholder {
   width: 100px;
+  float: left !important;
 }
 
 #sidebar {
